# fastapi-filters

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  ROADMAP.md  mkdocs.yml  pyproject.toml
.github/workflows/: automerge.yml  lint.yml  publish.yml  test.yml
docs/: contributing.md  license.md
docs/learn/integrations/: beanie.md  raw_sql.md  sqlalchemy.md  tortoise.md
docs/learn/real_world/: overview.md
docs/learn/tutorial/: configuration.md  csv_list.md  filter_field.md  filter_set.md  first_steps.md  openapi_docs.md  operators.md  programmatic_filters.md  sorting.md
examples/: app.py  beanie_app.py
fastapi_filters/: __init__.py  _filterset_resolver.py  cls_decl.py  config.py  configs.py  docs.py  errors.py  fields.py  filter_set.py  filters.py  filters_decl.py  filters_set.py  filterset.py  hooks.py  op.py  operators.py  schemas.py  settings.py  sorters.py  types.py  utils.py
fastapi_filters/ext/: beanie.py  raw_sql.py  sqlachemy.py  sqlalchemy.py  tortoise.py
tests/: conftest.py  test_config.py  test_docs.py  test_fields.py  test_filter_set.py  test_filters.py  test_filterset.py  test_op.py  test_operators.py  test_raw_sql.py  test_schemas.py  test_sorters.py  test_utils.py  utils.py
tests/mypy/: arr_op.py  arr_op_invalid.py  bool_op.py  conftest.py  enum_op.py  field_set_decl.py  num_op.py  num_op_invalid.py  str_op.py  str_op_invalid.py
tests/sqlachemy/: test_sqalchemy.py
